deleted extra html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <h1 data-aos="fade-up">Plan Events Effortlessly with Event Ease!</h1>
-        <p id="subtitle" data-aos="fade-up" data-aos-delay="200">Simplify event planning with smart tools like task management, budget tracking & QR check-ins.</p>
+        <p id="subtitle" data-aos="fade-up" data-aos-delay="200">Simplify event planning with smart tools like</p>
+        <p id="dynamic-text"></p>
         <div class="buttons" data-aos="fade-up" data-aos-delay="400">
             <button class="btn">Request a Demo</button>
             <a href="signup.html" class="btn">Get Started</a>
