--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/trust.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container1">
         <h2>Login</h2>
         <form id="login-form">
             <input type="email" id="login-email" placeholder="Email Address" required>
