--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/trust.css">
+    <link rel="stylesheet" href="css/signup.css">
 </head>
 <body>
     <div class="container">
