added images in users section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
     <!-- Navbar -->
     <nav class="navbar">
+        <div class="logo">
+            <img src="images/logo.jpg" alt="Logo">
+            </div>
         <h2>Event Ease</h2>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
@@ -34,7 +37,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="slider">
+        <!-- <div class="slider">
             <div class="slide fade">
                 <img class="slider.img" src="images/1st.jpg" alt="Event Planning">
                 <div class="caption">Corporate Meetings</div>
@@ -49,14 +52,14 @@
             </div>
             <a class="prev" onclick="changeSlide(-1)">❮</a>
             <a class="next" onclick="changeSlide(1)">❯</a>
-        </div>
+        </div> -->
         
         
         <h1 data-aos="fade-up">Plan Events Effortlessly with Event Ease!</h1>
-        <p id="subtitle" data-aos="fade-up" data-aos-delay="200">Simplify event planning with smart tools like</p>
+        <p id="subtitle" data-aos="fade-up" data-aos-delay="200">Simplify event planning with smart tools like task management, budget tracking, QR check-ins, etc</p>
         <p id="dynamic-text"></p>
         <div class="buttons" data-aos="fade-up" data-aos-delay="400">
-            <button class="btn">Request a Demo</button>
+            <!-- <button class="btn">Request a Demo</button> -->
             <a href="signup.html" class="btn">Get Started</a>
         </div>
         <!-- Scroll Arrow -->
@@ -111,27 +114,32 @@
     </section>
 
     <!-- Who Uses Event-Ease -->
-    <section class="Users">
-        <h2>Who Uses Event Ease?</h2>
-        <div class="user-cards">
-            <div class="user-card">
-                <span>1️⃣</span>
-                <p>Corporate Events</p>
-            </div>
-            <div class="user-card">
-                <span>2️⃣</span>
-                <p>Wedding Planners</p>
-            </div>
-            <div class="user-card">
-                <span>3️⃣</span>
-                <p>Conferences & Seminars</p>
-            </div>
-            <div class="user-card">
-                <span>4️⃣</span>
-                <p>College Clubs And Fest Managers</p>
-            </div>
+<section class="Users">
+    <h2>Who Uses Event Ease?</h2>
+    <div class="user-cards">
+        <div class="user-card">
+            <img src="images/1st.jpg" alt="Corporate Events" class="user-image">
+            <span>1️⃣</span>
+            <p>Corporate Events</p>
         </div>
-    </section>
+        <div class="user-card">
+            <img src="images/3rd.jpg" alt="Wedding Planners" class="user-image">
+            <span>2️⃣</span>
+            <p>Wedding Planners</p>
+        </div>
+        <div class="user-card">
+            <img src="images/4th.jpg" alt="Conferences & Seminars" class="user-image">
+            <span>3️⃣</span>
+            <p>Conferences & Seminars</p>
+        </div>
+        <div class="user-card">
+            <img src="images/2nd.jpg" alt="College Clubs And Fest Managers" class="user-image">
+            <span>4️⃣</span>
+            <p>College Clubs And Fest Managers</p>
+        </div>
+    </div>
+</section>
+
 
     <!-- Testimonials Section -->
 <section class="testimonials-section" data-aos="fade-up">
@@ -171,9 +179,9 @@
       <!-- Free Plan -->
       <div class="pricing-card">
         <h3>Free Plan</h3>
-        <p class="price">$0/month</p>
+        <p class="price"> ₹0/month</p>
         <ul>
-          <li>Basic Event Planning</li>
+          <li>Basic Event Planning Tools</li>
           <li>Task Management</li>
           <li>Email Support</li>
         </ul>
@@ -183,7 +191,7 @@
       <!-- Pro Plan -->
       <div class="pricing-card">
         <h3>Pro Plan</h3>
-        <p class="price">$29/month</p>
+        <p class="price"> ₹2480/month</p>
         <ul>
           <li>All Free Features</li>
           <li>Advanced Tools & Integrations</li>
