--- a/about.html
+++ b/about.html
@@ -10,16 +10,21 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/trust.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
 
   <!-- Navbar -->
   <header class="navbar">
     <div class="container">
-      <a href="index.html" class="logo">EventEase</a>
       <nav>
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
+          <div class="logo">
+            <img src="images/logo.jpg" alt="Logo">
+            </div>
+          <h2>Event Ease</h2>
+          <li><a href="index.html" class="home">Home</a></li>
           <li><a href="about.html" class="active">About Us</a></li>
         </ul>
       </nav>
@@ -29,7 +34,7 @@
   <!-- About Us Section -->
   <main class="about-section">
     <section class="intro">
-      <h1>About EventEase</h1>
+      <h1 class="about">About EventEase</h1>
       <p>At EventEase, we simplify event planning by offering seamless solutions for managing, organizing, and promoting your events effortlessly.</p>
     </section>
 
@@ -48,8 +53,8 @@
       <h2>Why Choose EventEase?</h2>
       <div class="feature-cards">
         <div class="feature-card">
-          <h3>Easy to Use</h3>
-          <p>Intuitive interface tailored for organizers.</p>
+          <h3>All In One Platform</h3>
+          <p>This Platform Provides all Event Management Tools.</p>
         </div>
         <div class="feature-card">
           <h3>Customizable</h3>
@@ -67,21 +72,25 @@
       <div class="team-cards">
         <div class="team-card">
           <img src="images/user.jpg" alt="Team Member 1">
+          <i class="fa-solid fa-code"></i>
           <h3>Manish Kulkarni</h3>
-          <p>Founder & Developer</p>
+          <p>Founder & Frontend Developer</p>
         </div>
         <div class="team-card">
-          <img src="team2.jpg" alt="Team Member 2">
+          <img src="images/chetan.jpg" alt="Team Member 2">
+          <i class="fa-solid fa-server"></i>
           <h3>Chetan Kotangle</h3>
-          <p>Web Developer</p>
+          <p>Backend Developer</p>
         </div>
         <div class="team-card">
-          <img src="team3.jpg" alt="Team Member 3">
+          <img src="images/om.jpg" alt="Team Member 3">
+          <i class="fa-solid fa-bullhorn"></i>
           <h3>Om Khirade</h3>
           <p>Marketing Head</p>
         </div>
         <div class="team-card">
           <img src="team2.jpg" alt="Team Member 2">
+          <i class="fa-solid fa-pencil-alt"></i>
           <h3>Himanshu Awale</h3>
           <p>UI/UX Designer</p>
         </div>
