--- a/features.html
+++ b/features.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Features|Event-Ease</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/hero.css">
@@ -17,19 +17,29 @@
         <h1>Our Features</h1>
         <div class="feature-list">
             <div class="feature-item">
-                <i class="fas fa-tasks"></i> Task Management
+                <i class="fas fa-tasks"></i>
+                <h3>Task Management</h3>
+                <p>Manage tasks effectively with our intuitive task management system.</p>
             </div>
             <div class="feature-item">
-                <i class="fas fa-chart-line"></i> Budget Tracking
+                <i class="fas fa-chart-line"></i>
+                <h3>Budget Tracking</h3>
+                <p>Track your budget and expenses with detailed reports.</p>
             </div>
             <div class="feature-item">
-                <i class="fas fa-qrcode"></i> QR Check-ins
+                <i class="fas fa-qrcode"></i>
+                <h3>QR Check-ins</h3>
+                <p>Enable quick and easy check-ins with QR code scanning.</p>
             </div>
             <div class="feature-item">
-                <i class="fas fa-users"></i> Collaboration Tools
+                <i class="fas fa-users"></i>
+                <h3>Collaboration Tools</h3>
+                <p>Enhance teamwork with integrated collaboration tools.</p>
             </div>
             <div class="feature-item">
-                <i class="fas fa-bell"></i> Automated Reminders
+                <i class="fas fa-bell"></i>
+                <h3>Automated Reminders</h3>
+                <p>Never forget important tasks with automated reminders.</p>
             </div>
         </div>
     </section>
