removed some comments

--- a/work.html
+++ b/work.html
@@ -22,15 +22,15 @@
             </div>
             <div class="step-card">
                 <span>2️⃣</span>
-                <p>Create your event details.</p>
+                <p>Browse through our tools and services tailored for you.</p>
             </div>
             <div class="step-card">
                 <span>3️⃣</span>
-                <p>Send invites & track RSVPs.</p>
+                <p>Start using our platform seamlessly with a user-friendly interface.</p>
             </div>
             <div class="step-card">
                 <span>4️⃣</span>
-                <p>Manage event updates & feedback.</p>
+                <p>Track your progress and optimize your experience.</p>
             </div>
         </div>
     </section>
