--- a/about.html
+++ b/about.html
@@ -15,21 +15,28 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <header class="navbar">
-    <div class="container">
-      <nav>
-        <ul class="nav-links">
-          <div class="logo">
+   <!-- Navbar -->
+    <nav class="navbar">
+        <div class="logo">
             <img src="images/logo.jpg" alt="Logo">
+             <h2>Event Ease</h2>
             </div>
-          <h2>Event Ease</h2>
-          <li><a href="index.html" class="home">Home</a></li>
-          <li><a href="about.html" class="active">About Us</a></li>
-        </ul>
-      </nav>
+       
+        <!-- Hamburger Menu Icon -->
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
-  </header>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="work.html">How It Works</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="signup.html">Signup</a></li>
+            <li><a href="login.html">Login</a></li>
+        </ul>
+    </nav>
 
   <!-- About Us Section -->
   <main class="about-section">
